--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "~10.1.0",
     "@angular/platform-browser-dynamic": "~10.1.0",
     "@angular/router": "~10.1.0",
+    "@swimlane/ngx-charts": "^16.0.0",
     "date-fns": "^2.16.1",
     "rxjs": "~6.6.3",
     "tslib": "^2.0.0",
